--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+input{
+  @apply p-4 outline-none my-1 mx-9 border border-gray-300;
+}
